[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://FinalRow.gd" id="1_script"]

[node name="FinalRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 10
script = ExtResource("1_script")

[node name="P1Ans" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "..."
horizontal_alignment = 2
vertical_alignment = 1

[node name="P1Pts" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.270588, 0.376471, 1)
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="VSeparator" parent="."]
layout_mode = 2

[node name="P2Ans" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "..."
horizontal_alignment = 0
vertical_alignment = 1

[node name="P2Pts" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.270588, 0.376471, 1)
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
